Version 0.9.5.1 - 201010
- MAJOR: gateway uplink will work only with master installed with playSMS >= 0.9.5.1 (anton)
- MAJOR: fix message empty when handled by gnokii or smstools due to single quote in $lc (kendokar)
- add htmlspecialchars to SMS messages shown in inbox, incoming and outgoing (anton)
- add new gateway module gammu, tested using backend FILES with Gammu version 1.28.0 (anton)
- add interceptincomingsms() lib/fn_core.php, in setsmsincomingaction(), hookable for tools (anton)
- add interceptsmstoinbox() lib/fn_core.php, in insertsmstoinbox(), hookable for tools (anton)
- add css class .error_string and .required, themes common.css (anton)
- add index.php?app=call to run hookable function 'call', this will replace all direct access (anton)
- change websend2pv() to sendsms_pv() and websend2group() to sendsms_bc(), lib/fn_sendsms.php (anton)
- remove input.php and output.php and replace them with webservices, docs/WEBSERVICES (anton)
- remove send2group() and replace it with sendsms_bc(), lib/fn_sendsms.php (anton)
- fix autoreply, sendsms_pv() returns array (anton)
- fix simplerate_hook_cansend should print $username to logger_print instead $uid (anton)
- fix phonebook should be able to match numbers with entries from shared groups (anton)
- fix phonebook number matching got better (anton)
- fix short_open_tag issue, now all short tags including <?= replaced with <?php (anton)
- fix length of p_footer in db table tblSMSOutgoing should be 30, not 11 (anton)
- fix condition when PHP gettext not available or disabled, declare _() in init.php (anton)

Version 0.9.5 - 101010
- add multi-language support per plugin bases (anton)
- add support unicode in uplink (anton)
- add unicode message option in websend2group (anton)
- add unicode parameter in input.php (anton)
- add cfg_additional_param (varchar 250) in clickatell, kannel and uplink db config (anton)
- add check on php function mb_convert_encoding(), must be supported for unicode messages (anton)